Added an advanced search page. Re-factored the threads in the cluster manager to listeners and schedulers.
git-svn-id: http://ikube.googlecode.com/svn/trunk@751 89a0fb20-889e-aefa-90f6-7c296b20d5cf